--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="callRegisterComponent === false" class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
-    <mat-card class="box">
-        <img mat-card-md-image src="../../assets/images/mackIcon/M_vermelho.png" class="logoMRed" alt="Logo isolado do Mackenzie">
+    <mat-card class="">
+        <img mat-card-md-image src="../../assets/images/mackIcon/M_vermelho.png" class="img-fluid mx-auto d-block" alt="Logo isolado do Mackenzie">
         <mat-card-header>
             <mat-card-title class="appNameTitle">Aplicação CIF</mat-card-title>
         </mat-card-header>
