--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -63,11 +63,10 @@
                         <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
                     <div class="nextStep">
-                        <button mat-button mat-button (click)="goBack2Login()" mat-stroked-button type="submit" color="warn" class="btn-block btn-cancel">
+                        <button mat-button mat-button (click)="goBack2Login()" mat-stroked-button type="submit" color="warn" class="float-left">
                             Cancelar
                         </button>
-                        <span class="spacer"></span>
-                        <button mat-button mat-button matStepperNext mat-stroked-button type="submit" color="warn" class="btn-block btn-next">
+                        <button mat-button mat-button matStepperNext mat-stroked-button type="submit" color="warn" class="float-right">
                             Próximo
                         </button>
                     </div>
@@ -111,10 +110,10 @@
                         </mat-select>
                     </mat-form-field>
                     <div class="nextStep">
-                        <button *ngIf="!loading" mat-button (click)="stepper.reset()" mat-stroked-button color="warn" class="btn-block">
+                        <button *ngIf="!loading" mat-button (click)="stepper.reset()" mat-stroked-button color="warn" class="float-left">
                             Limpar
                         </button>
-                        <button *ngIf="!loading" mat-button matStepperNext mat-stroked-button type="submit" color="primary" class="btn-block btn-next">
+                        <button *ngIf="!loading" mat-button matStepperNext mat-stroked-button type="submit" color="warn" class="float-right">
                             Concluir
                         </button>
                         <section *ngIf="loading" class="example-section">
