--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -1,4 +1,8 @@
-<div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+<div *ngIf="!loaded" class="spinner" fxLayoutAlign="center">
+    <mat-spinner></mat-spinner>
+</div>
+
+<div class="login-wrapper" fxLayout="row" *ngIf="loaded" fxLayoutAlign="center center">
     <mat-card class="box">
         <mat-card-header>
             <mat-card-title> Meu perfil </mat-card-title>
@@ -61,8 +65,9 @@
                         <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
                     <div class="nextStep">
-                        <span class="spacer"></span>
-                        <button mat-button mat-button matStepperNext mat-stroked-button type="submit" color="primary" class="btn-block">
+                        <button *ngIf="!loading" mat-button (click)="cancelUpdate()" mat-stroked-button color="warn" class="float-left">
+                            Cancelar </button>
+                        <button mat-button matStepperNext mat-stroked-button type="submit" color="warn" class="float-right">
                             Próximo
                         </button>
                     </div>
@@ -106,13 +111,17 @@
                         </mat-select>
                     </mat-form-field>
                     <div class="nextStep">
-                        
-                        <button *ngIf="!loading" mat-button matStepperNext mat-stroked-button type="submit" color="primary" class="btn-block">
+                        <button *ngIf="!loading" mat-button (click)="cancelUpdate()" mat-stroked-button color="warn" class="float-left">
+                            Cancelar
+                        </button>
+                        <button *ngIf="!loading" mat-button matStepperNext mat-stroked-button type="submit" color="warn" class="float-right">
                             Concluir
                         </button>
                     </div>
+                    <div *ngIf="loading" class="spinner" fxLayoutAlign="center">
+                        <mat-spinner></mat-spinner>
+                    </div>
                 </form>
-                <button *ngIf="!loading" mat-button (click)="cancelUpdate()" mat-stroked-button color="warn" class="btn-block" style="margin-top:0.3em;"> Cancelar </button>
             </mat-step>
         </mat-horizontal-stepper>
     </mat-card>
