--- a/src/app/patient-register/patient-register.component.css
+++ b/src/app/patient-register/patient-register.component.css
@@ -177,11 +177,10 @@ textarea {
         margin-right: 0;
     }
     .login-wrapper .mat-stroked-button {
-        width: 225px;
+        width: 100%;
         margin-bottom: 5%;
     }
     .btn-clean {
         margin-bottom: 5%;
     }
 }
-
