--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <mat-nav-list class="list-menu-side">
             <mat-button *ngIf="role == 'THERAPIST'" class="btn-side-menu" mat-list-item (click)="redirectToEvaluation()">
                 <mat-icon class="d-inline p-2 icon-side-menu">add_to_queue</mat-icon><span class="d-inline p-2">Nova Avaliação</span></mat-button>
-            <mat-button *ngIf="role == 'THERAPIST'" class="btn-side-menu" mat-list-item>
+            <mat-button *ngIf="role == 'THERAPIST'" class="btn-side-menu" mat-list-item (click)="redirectToEvaluationList()">
                 <mat-icon class="d-inline p-2 icon-side-menu">list_alt</mat-icon><span class="d-inline p-2">Avaliações Anteriores</span>
             </mat-button>
             <mat-button *ngIf="role == 'THERAPIST'" class="btn-side-menu" mat-list-item (click)="redirectToPatientRegister()">
@@ -38,7 +38,7 @@
         <div *ngIf="pageTitle != undefined && pageTitle.length != 0">
             <ul class="breadcrumb">
                 <li><a href="/">Home</a></li>
-                <li>{{pageTitle | titlecase}}</li>
+                <li> {{pageTitlePT}} </li> 
             </ul>
         </div>
 
