--- a/src/app/evaluation-list/evaluation-list.component.html
+++ b/src/app/evaluation-list/evaluation-list.component.html
@@ -1,4 +1,4 @@
-<!-- <p *ngFor="let evaluation of evaluations">{{evaluation | json}}</p>  -->
+
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
@@ -7,14 +7,15 @@
     <td mat-cell *matCellDef="let element"> {{therapistName}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="therapistName">
+  <ng-container matColumnDef="patientName">
     <th mat-header-cell *matHeaderCellDef> Paciente </th>
-    <td mat-cell *matCellDef="let element"> {{element.patientId}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.patientName}} </td>
   </ng-container>
 
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef> Data da avaliação </th>
-    <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+    <td mat-cell *matCellDef="let element"> {{dateConversion(element.date)}} </td>
+    
   </ng-container>
 
   <ng-container matColumnDef="location">
