--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -14,7 +14,7 @@
                 <mat-form-field>
                     <mat-label>Paciente</mat-label>
                     <mat-select formControlName="patientId">
-                        <mat-option *ngFor="let patient of patients" [value]="patient.firstName">
+                        <mat-option *ngFor="let patient of patients" [value]="patient.id">
                             {{ patient.firstName }} - {{ patient.cpf | mask: '000.000.000-00' }}
                         </mat-option>
                     </mat-select>
@@ -196,7 +196,7 @@
 
                     <mat-divider></mat-divider>
 
-                    <div class="general-grade" fxLayoutAlign="end" formArrayName="cGrade">
+                    <div class="general-grade" fxLayoutAlign="end" formArrayName="capacityGrade">
                         <span class="bold-font grade grade-radio">C</span>
                         <mat-radio-group [formControlName]="activityAndParticipation.indexOf(aNp)" class="grade-radio" aria-label="Select an option">
                             <mat-radio-button color="warn" value="0">0</mat-radio-button>
@@ -223,7 +223,7 @@
                             </mat-select>
                         </mat-form-field>
                     </div>
-                    <div class="general-grade" fxLayoutAlign="end" formArrayName="pGrade">
+                    <div class="general-grade" fxLayoutAlign="end" formArrayName="performanceGrade">
                         <span class="bold-font grade grade-radio">P</span>
                         <mat-radio-group [formControlName]="activityAndParticipation.indexOf(aNp)" class="grade-radio" aria-label="Select an option">
                             <mat-radio-button color="warn" value="0">0</mat-radio-button>
@@ -584,7 +584,8 @@
                 <p><span class="bold-font">Paciente: </span>{{ evaluation.patientId }}</p>
                 <p><span class="bold-font">Terapeuta: </span>{{ evaluation.therapistId }}</p>
                 <p><span class="bold-font">Local: </span>{{ evaluation.location }}</p>
-                <p><span class="bold-font">Data: </span>{{ evaluation.date }}</p>
+                <p><span class="bold-font">Data: </span> {{ evaluation.date | date:"dd 'de' MMM 'de' yyyy"}} </p>
+                
             </div>
             <hr>
             <h4 matTooltip="{{stepTwo}}">{{stepTwo}}</h4>
@@ -599,8 +600,8 @@
             <div *ngFor="let question of activityAndParticipation ">
                 <div class="border rounded mb-3" *ngIf=" getAnswerGrade(question) !=undefined ">
                     <h5 class="p-2">{{ question.code }} - {{ question.title }}</h5>
-                    <p class="p-2">C: {{ getAnswerGrade(question).cGrade }}</p>
-                    <p class="p-2">P: {{ getAnswerGrade(question).pGrade }}</p>
+                    <p class="p-2">C: {{ getAnswerGrade(question).capacityGrade }}</p>
+                    <p class="p-2">P: {{ getAnswerGrade(question).performanceGrade }}</p>
                 </div>
             </div>
             <hr>
