finalizacao dos ajustes no formulario profissional, alteracao no layout de exibicao das avaliacoes, que passa a ser na forma de card. Alteracao nos titulos dos conteudos, descrevendo o cif geriatrico

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -127,3 +127,12 @@ ul.breadcrumb {
     color: #01447e;
     text-decoration: underline;
   }
+
+
+
+/* Cards */
+.card{
+    width:60%;
+    text-align:center;
+    text-transform: uppercase;
+}
