--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
             <div>
-                <span class="app-name-header" (click)="goHome()"> Aplicação CIF</span>
+                <span class="app-name-header" (click)="goHome()"> Aplicação Core Set CIF geriátrico </span>
                 <mat-icon (click)="goHome()" class="ml-2 align-top" svgIcon="mack_white"></mat-icon>
             </div>
             <span class="spacer"></span>
