--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <mat-card class="">
         <img mat-card-md-image src="../../assets/images/mackIcon/M_vermelho.png" class="img-fluid mx-auto d-block" alt="Logo isolado do Mackenzie">
         <mat-card-header>
-            <mat-card-title class="appNameTitle">Aplicação CIF</mat-card-title>
+            <mat-card-title class="appNameTitle">Aplicação Core Set CIF <br> geriátrico</mat-card-title>
         </mat-card-header>
         <mat-card-header class="entrarHeader">
             <mat-card-title class="entrarTitle">Entrar</mat-card-title>
