--- a/src/app/evaluation-result/evaluation-result.component.html
+++ b/src/app/evaluation-result/evaluation-result.component.html
@@ -7,7 +7,7 @@
     <button mat-button mat-stroked-button (click)="download()" color="warn" class="float-right mx-auto text-center">Baixar</button>
 </div>
 <div *ngIf="loaded" id="print" #print>
-    <h1 class="header-title display-5">Avaliação Funcional</h1>
+    <h1 class="header-title display-5">Relatório de Classificação Funcional</h1>
     <hr>
     <div class="first-header">
         <p><span class="bold-font">Paciente: </span>{{ evaluation.patientName }}</p>
